...
    android:layout_height="match_parent"
    tools:context=".settings"
    tools:ignore="ExtraText">


    <EditText
        android:id="@+id/userName"
        android:layout_width="251dp"
        android:layout_height="0dp"
        android:layout_marginTop="87dp"
        android:layout_marginBottom="77dp"
        android:text="@string/username"
        android:textSize="25sp"
...
        android:autofillHints=""
        />



    <Button
        android:id="@+id/saveNameButton"
        android:layout_width="112dp"
        android:layout_height="54dp"
        android:layout_marginTop="232dp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.147"
...
