...
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="3dp"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homePageTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homePageTitle"
        android:layout_width="0dp"
        android:layout_height="68dp"
...
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="12dp"
        android:text="@string/Task1"
        app:layout_constraintBottom_toTopOf="@+id/settingButton"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
